// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsByHostHeader styled components Icon should render properly 1`] = `
.c0 {
  margin-left: 30px;
  margin-bottom: 3px;
}

<i
  className="c0"
/>
`;

exports[`AppsByHostHeader styled components SubTitle should render properly 1`] = `
.c0 {
  font-size: 18px;
  font-family: "Helvetica";
  color: #000000;
  line-height: 22px;
  margin-left: 8px;
  margin-bottom: 3px;
}

<div
  className="c0"
/>
`;

exports[`AppsByHostHeader styled components Title should render properly 1`] = `
.c0 {
  font-size: 35px;
  font-family: "Helvetica Bold";
  color: #000000;
  line-height: 43px;
}

<div
  className="c0"
/>
`;

exports[`AppsByHostHeader styled components Wrapper should render properly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div
  className="c0"
/>
`;
